# underwater-scene

./: .gitignore  CMakeLists.txt  README.md  design.md
assets/ocean_floor/: ocean_floor.mtl
assets/shark/: shark.fbx
assets/submarine/: sub.mtl
include/: AppCallbacks.h  AppState.h  Camera.h  Mesh.h  Model.h  Raycaster.h  SceneRenderer.h  SceneResources.h  Shader.h  SharkSkeletonAnimator.h  Skybox.h  SplinePath.h  SplineSwimAnimator.h
include/glad/: glad.h
shaders/: lines.frag  lines.vert  pbr.frag  pbr.vert  shadow.frag  shadow.vert  skybox.frag  skybox.vert
src/: AppCallbacks.cpp  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Raycaster.cpp  Raycaster.h  SceneRenderer.cpp  SceneResources.cpp  Shader.cpp  SharkSkeletonAnimator.cpp  Skybox.cpp  SplinePath.cpp  SplinePathTest.cpp  SplineSwimAnimator.cpp  glad.c  main.cpp  stb_image.cpp
